// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Heading" renders H! (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: #fff;
  display: block;
  font-size: 3rem;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  line-height: 3.5rem;
  margin-bottom: 64px;
  margin-top: 0;
  min-height: 3rem;
}

@media (max-width: 639px) {
  .emotion-1 {
    font-size: 2.5rem;
    line-height: 3rem;
  }
}

<div
  className="emotion-0"
>
  <h1
    className="emotion-1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: block;
  font-size: 3rem;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  line-height: 3.5rem;
  margin-bottom: 64px;
  margin-top: 0;
  min-height: 3rem;
}

@media (max-width: 639px) {
  .emotion-1 {
    font-size: 2.5rem;
    line-height: 3rem;
  }
}

<div
  className="emotion-0"
>
  <h1
    className="emotion-1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 as default 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: block;
  font-size: 3rem;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  line-height: 3.5rem;
  margin-bottom: 64px;
  margin-top: 0;
  min-height: 3rem;
}

@media (max-width: 639px) {
  .emotion-1 {
    font-size: 2.5rem;
    line-height: 3rem;
  }
}

<div
  className="emotion-0"
>
  <h1
    className="emotion-1"
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H2 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: block;
  font-size: 1.25rem;
  font-weight: 700;
  text-align: left;
  text-transform: none;
  line-height: 1.75rem;
  margin-bottom: 24px;
  margin-top: 32px;
}

@media (max-width: 639px) {
  .emotion-1 {
    font-size: 1.125rem;
    line-height: 1.625rem;
    margin-bottom: 20px;
    margin-top: 26px;
  }
}

<div
  className="emotion-0"
>
  <h2
    className="emotion-1"
  >
    H2
  </h2>
</div>
`;

exports[`"Heading" renders H3 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: block;
  font-size: 1rem;
  font-weight: 600;
  text-align: left;
  text-transform: none;
  margin-bottom: 16px;
}

<div
  className="emotion-0"
>
  <h3
    className="emotion-1"
  >
    H3
  </h3>
</div>
`;

exports[`"Heading" renders H4 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: block;
  font-size: 0.6875rem;
  font-weight: 400;
  text-align: left;
  text-transform: none;
  margin-bottom: 5px;
  margin-top: 20px;
}

<div
  className="emotion-0"
>
  <h3
    className="emotion-1"
  >
    H4
  </h3>
</div>
`;
